@@ -4,10 +4,10 @@ dist: focal
 
 jobs:
   include:
-  - python: 3.6
-  - python: 3.7
   - python: 3.8
-  - python: 3.9
+#  - python: 3.6
+#  - python: 3.7
+#  - python: 3.9
 
 install:
   - pip install -r requirements.txt
